[project]
name = "minesweeper"
version = "0.1.0"
description = "A simple implementation of the classic Minesweeper game in Python with a simple bot, while adhering to strict coding standards."
author = "Incendius"
requires-python = ">=3.13"
dependencies = [
    "darglint>=1.8.1",
    "flake8-annotations>=3.1.1",
    "flake8-bandit>=4.1.1",
    "flake8-bugbear>=24.12.12",
    "flake8-comprehensions>=3.16.0",
    "flake8-eradicate>=1.5.0",
    "flake8-pyproject>=1.2.3",
    "pygame>=2.6.1",
    "pylint>=3.3.7",
    "wemake-python-styleguide>=1.3.0",
]

[tool.isort]
profile = "google"

[tool.flake8]
extend-select = [
    "B9",
    "ANN4",
]
eradicate-aggressive = true
