[project]
name = "minesweeper"
version = "0.1.0"
description = "A simple implementation of the classic Minesweeper game in Python with a simple bot, while adhering to strict coding standards."
requires-python = ">=3.13"
dependencies = [
    "bandit>=1.8.6",
    "darglint>=1.8.1",
    "flake8-annotations>=3.1.1",
    "flake8-bugbear>=24.12.12",
    "flake8-builtins>=2.5.0",
    "flake8-comprehensions>=3.16.0",
    "flake8-eradicate>=1.5.0",
    "flake8-pyproject>=1.2.3",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pygame>=2.6.1",
    "pylint>=3.3.7",
    "ruff>=0.12.8",
    "wemake-python-styleguide>=1.3.0",
]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 80
extend-select = [
    "B9",
    "ANN4",
]
extend-ignore = [
    "E203",
    "E501",
    "E701",
]
eradicate-aggressive = true
enable = [
    "DAR104",
]

[tool.pylint.format]
max-line-length = "88"
load-plugins = [
    "pylint.extensions.broad_try_clause",
    "pylint.extensions.code_style",
    "pylint.extensions.comparison_placement",
    "pylint.extensions.confusing_elif",
    "pylint.extensions.for_any_all",
    "pylint.extensions.consider_refactoring_into_while_condition",
    "pylint.extensions.consider_ternary_expression",
    "pylint.extensions.bad_builtin",
    "pylint.extensions.mccabe",
    "pylint.extensions.dict_init_mutate",
    "pylint.extensions.docstyle",
    "pylint.extensions.dunder",
    "pylint.extensions.check_elif",
    "pylint.extensions.empty_comment",
    "pylint.extensions.eq_without_hash",
    "pylint.extensions.private_import",
    "pylint.extensions.magic_value",
    "pylint.extensions.redefined_variable_type",
    "pylint.extensions.no_self_use",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.docparams",
    "pylint.extensions.redefined_loop_name",
    "pylint.extensions.set_membership",
    "pylint.extensions.typing",
    "pylint.extensions.while_used",
]

[tool.mypy]
strict = true
